--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -1,6 +1,6 @@
 <div class="btn-group-fab" role="group" aria-label="FAB Menu">
   <div>
-    <button data-toggle="modal" data-target="#createModal" type="button" class="btn btn-main has-tooltip" data-placement="left" title="Menu"> <svg class="bi bi-chevron-right" width="32" height="42" viewBox="0 0 20 20"  class="bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+    <button data-toggle="modal" (click)="clean()" data-target="#createModal" type="button" class="btn btn-main has-tooltip create-button" data-placement="left" title="Menu"> <svg class="bi bi-chevron-right" width="32" height="42" viewBox="0 0 20 20"  class="bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
       <path fill-rule="evenodd" d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z"/>
       <path fill-rule="evenodd" d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z"/>
     </svg>
